Harmony bubble corner radius. Was: 3. Now: 2.

Bug: 760429
Change-Id: I0a1b401c4dbcbbf10599c42531e26d081c3f4a32